correct type in file path

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                 </a>
             </div>
             <div class="col-md-2">
-                <a class="fancybox" rel="group" href="img\pic_wall\IMG_20200712_140452.jpg">
+                <a class="fancybox" rel="group" href="img/pic_wall/IMG_20200712_140452.jpg">
                     <div class="img-wrap">
                         <div class="overlay">
                             <i class="fa fa-search"></i>
@@ -170,12 +170,12 @@
                 </a>
             </div>
             <div class="col-md-2">
-                <a class="fancybox" rel="group" href="img/pic_wall/IMG_20210418.JPG">
+                <a class="fancybox" rel="group" href="img/pic_wall/IMG_20210418.jpg">
                     <div class="img-wrap">
                         <div class="overlay">
                             <i class="fa fa-search"></i>
                         </div>
-                        <img src="img/pic_wall/IMG_20210418.JPG" alt=""/>
+                        <img src="img/pic_wall/IMG_20210418.jpg" alt=""/>
                     </div>
                 </a>
             </div>
