--- a/index.html
+++ b/index.html
@@ -60,8 +60,7 @@
         <div class="row">
             <div class="col-md-10 col-md-offset-1">
                 <div class="hero-content text-center">
-                    <h1>Yuhang and Ariel</h1>
-                    <h1></h1>
+                    <h1>Ariel&Yuhang</h1>
                     <!--<img src="img/logo-lg.png">-->
                     <!--<p class="intro">Ram & Antara are getting hitched!</p>-->
                     <!--<a href="#" class="btn btn-fill btn-large btn-margin-right">Scroll Down</a> -->
@@ -259,6 +258,10 @@
 </section>
 
 <section class="rsvp text-center" id="rsvp">
+    <div class="text-center">
+        <h3>What are you waiting for?</h3>
+        <p>We would greatly appreciate if you could RSVP before 13rd of July '22</p>
+    </div>
 
     <div id="rsvp-modal" class="modal fade" tabindex="-1" role="dialog">
         <div class="modal-dialog" role="document">
@@ -279,8 +282,6 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
-                <h3>What are you waiting for?</h3>
-                <p>We would greatly appreciate if you could RSVP before 13rd of July '22</p>
                 <form id="rsvp-form" class="rsvp-form"
                       action=""
                       method="POST">
@@ -305,7 +306,7 @@
                             <div class="form-input-group">
                                 <i class="fa fa-check-square-o"></i>
                                 <select name="come" class="" placeholder="Can you make it?" required>
-                                    <option>Yesss!</option>
+                                    <option>Yesss! I'll be there!</option>
                                     <option>Really sorry, I can't</option>
                                 </select>
                             </div>
@@ -322,7 +323,7 @@
                         <div class="col-md-12" id="alert-wrapper"></div>
                     </div>
                     <button class="btn-fill rsvp-btn">
-                        Yes, sign me up!
+                        That's it!
                     </button>
                 </form>
             </div>
