--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class="row">
             <div class="col-md-10 col-md-offset-1">
                 <div class="hero-content text-center">
-                    <h1>Ariel&Yuhang</h1>
+                    <h1>Yuhang & Yike</h1>
                     <!--<img src="img/logo-lg.png">-->
                     <!--<p class="intro">Ram & Antara are getting hitched!</p>-->
                     <!--<a href="#" class="btn btn-fill btn-large btn-margin-right">Scroll Down</a> -->
@@ -230,7 +230,7 @@
 <section id="map" class="section-padding">
     <div class="text-center">
         <h3>How do I get there?</h3>
-        <p>It's way easier than you think!</p>
+        <p>It's right in central London</p>
     </div>
     <div id="map-canvas"></div>
     <div id="map-content-wrapper" class="container pointer-events-none">
@@ -271,7 +271,7 @@
                     </button>
                     <div class="section-padding">
                         <h3>Thank you!</h3>
-                        <p>We are glad to see you join us on our big day.</p>
+                        <p>Yuhang has that duly recorded.</p>
                         <div id="add-to-cal"></div>
                     </div>
                 </div>
