--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
 <section class="rsvp text-center" id="rsvp">
     <div class="text-center">
         <h3>What are you waiting for?</h3>
-        <p>We would greatly appreciate if you could RSVP before 13rd of July '22</p>
+        <p>We would greatly appreciate if you could RSVP before 20th of July '22</p>
     </div>
 
     <div id="rsvp-modal" class="modal fade" tabindex="-1" role="dialog">
