fix bugs on display

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
     </div>-->
 </section>
 
-<section id="video-bg" class="hidden-sm hidden-xs">
+<section id="video-bg" > <!--class="hidden-sm hidden-xs"-->
     <div id="bgndVideo" class="player"
          data-property="{videoURL:'https://www.youtube.com/watch?v=fX_DAQ43bvc',containment:'#video-bg',autoPlay:true, mute:true, showControls:false, startAt:100, stopAt:112, opacity:1}">
     </div>
@@ -251,6 +251,7 @@
                             <a class="btn btn-accent btn-small" id="btn-show-map"><i class="fa fa-map-marker"></i>&nbsp;&nbsp;Show
                                 map</a>
                         </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -258,11 +259,6 @@
 </section>
 
 <section class="rsvp text-center" id="rsvp">
-    <div class="text-center">
-        <h3>What are you waiting for?</h3>
-        <p>We would greatly appreciate if you could RSVP before 20th of July '22</p>
-    </div>
-
     <div id="rsvp-modal" class="modal fade" tabindex="-1" role="dialog">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
@@ -280,6 +276,14 @@
     </div><!-- /.modal -->
 
     <div class="container">
+        <div class="row">
+            <div class="col--12">
+                <h1>&nbsp</h1>
+                <h1>&nbsp</h1>
+                <h3>What are you waiting for?</h3>
+                <p>We would greatly appreciate if you could RSVP before 20th of July '22</p>
+            </div>           
+        </div>     
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
                 <form id="rsvp-form" class="rsvp-form"
